@@ -1,3 +1,12 @@
+2008-10-09  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tkListbox.c:	Make literal return values consistent with
+	those generated by Tcl_PrintDouble().
+
+	* tests/entry.test:	Restore test naming consistency with Tk 8.5.
+	* tests/listbox.test:	Remove some more dependency on precision in
+	test results.
+
 2008-10-08  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tcl.m4:          fix for bug [2073255]
